--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,12 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
-    testImplementation 'junit:junit:4.+'
+    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    //MediaPlayer2
+    implementation 'androidx.media2:media2:1.0.0-alpha04'
+    //Exoplayer
+    implementation 'com.google.android.exoplayer:exoplayer-hls:2.16.0'
+    implementation 'com.google.android.exoplayer:exoplayer-core:2.16.0'
 }
