--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,11 @@
+/*
+ * *
+ *  * Created by DemonApps on 01.12.2021, 15:35
+ *  * Copyright (c) 2021 . All rights reserved.
+ *  * Last modified 01.12.2021, 14:50
+ *
+ */
+
 plugins {
     id 'com.android.application'
 }
@@ -9,8 +17,8 @@ android {
         applicationId "ru.demonapps.onlineradio"
         minSdk 21
         targetSdk 31
-        versionCode 1
-        versionName "1.0.0"
+        versionCode 2
+        versionName "1.0.2"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -35,9 +43,14 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    //FireBase
+    implementation platform('com.google.firebase:firebase-bom:29.0.0')
+    implementation 'com.google.firebase:firebase-analytics'
     //MediaPlayer2
     implementation 'androidx.media2:media2:1.0.0-alpha04'
     //Exoplayer
     implementation 'com.google.android.exoplayer:exoplayer-hls:2.16.1'
     implementation 'com.google.android.exoplayer:exoplayer-core:2.16.1'
 }
+apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
