--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,11 @@
+/*
+ * *
+ *  * Created by DemonApps on 01.12.2021, 15:35
+ *  * Copyright (c) 2021 . All rights reserved.
+ *  * Last modified 01.12.2021, 13:34
+ *
+ */
+
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     repositories {
@@ -6,7 +14,7 @@ buildscript {
     }
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.3"
-
+        classpath 'com.google.gms:google-services:4.3.10'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
