--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,11 @@
+#
+# /**
+#  * Created by DemonApps on 01.12.2021, 15:35
+#  * Copyright (c) 2021 . All rights reserved.
+#  * Last modified 27.11.2021, 16:35
+#  */
+#
+
 # Project-wide Gradle settings.
 # IDE (e.g. Android Studio) users:
 # Gradle settings configured through the IDE *will override*
