--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,3 +1,11 @@
+#
+# /**
+#  * Created by DemonApps on 01.12.2021, 15:35
+#  * Copyright (c) 2021 . All rights reserved.
+#  * Last modified 27.11.2021, 16:35
+#  */
+#
+
 #Mon Nov 01 21:02:53 MSK 2021
 distributionBase=GRADLE_USER_HOME
 distributionUrl=https\://services.gradle.org/distributions/gradle-7.0.2-bin.zip
