--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,11 @@
+/*
+ * *
+ *  * Created by DemonApps on 01.12.2021, 15:35
+ *  * Copyright (c) 2021 . All rights reserved.
+ *  * Last modified 27.11.2021, 16:35
+ *
+ */
+
 dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
