--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,8 @@
 /*
  * *
- *  * Created by DemonApps on 01.12.2021, 15:35
+ *  * Created by DemonApps on 02.12.2021, 17:40
  *  * Copyright (c) 2021 . All rights reserved.
- *  * Last modified 01.12.2021, 14:50
+ *  * Last modified 02.12.2021, 17:39
  *
  */
 
@@ -17,8 +17,8 @@ android {
         applicationId "ru.demonapps.onlineradio"
         minSdk 21
         targetSdk 31
-        versionCode 2
-        versionName "1.0.2"
+        versionCode 3
+        versionName "1.0.3"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -36,7 +36,7 @@ android {
 }
 
 dependencies {
-
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
