--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 /*
  * *
- *  * Created by DemonApps on 01.12.2021, 15:35
+ *  * Created by DemonApps on 28.12.2021, 18:33
  *  * Copyright (c) 2021 . All rights reserved.
- *  * Last modified 01.12.2021, 13:34
+ *  * Last modified 15.12.2021, 21:17
  *
  */
 
@@ -13,7 +13,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:7.0.3"
+        classpath 'com.android.tools.build:gradle:7.0.4'
         classpath 'com.google.gms:google-services:4.3.10'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
