--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,8 +17,8 @@ android {
         applicationId "ru.demonapps.onlineradio"
         minSdk 21
         targetSdk 32
-        versionCode 6
-        versionName "0.0.6"
+        versionCode 7
+        versionName "0.0.7"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -48,10 +48,10 @@ dependencies {
     //MediaPlayer2
     implementation 'androidx.media2:media2:1.0.0-alpha04'
     //Exoplayer
-    implementation 'com.google.android.exoplayer:exoplayer-hls:2.17.0'
-    implementation 'com.google.android.exoplayer:exoplayer-core:2.17.0'
+    implementation 'com.google.android.exoplayer:exoplayer-hls:2.17.1'
+    implementation 'com.google.android.exoplayer:exoplayer-core:2.17.1'
     //Яндекс реклама
-    implementation 'com.yandex.android:mobileads:5.0.0-alpha.1'
+    implementation 'com.yandex.android:mobileads:5.0.0'
     implementation 'com.yandex.android:mobmetricalib:4.1.1'
     //конец реклама
 }
